--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     width: 100%;
     padding: 20px;
     border-radius: 20px;
-    background-color:#FF3044 ;
+    background-color:#198754 ;
 }
 #meal-header{
     width: 70%;
